@@ -97,6 +97,7 @@ Release 0.9.2
 - moved creole code into plugin (it's bloating the relase and not 100% ready
   yet)
 - modify ZMDatabase to allow to return raw SQL data from query() and update()
+- start with exceptions (database)
 
 Release 0.9.1
 - zm_custom_validate_password in zm_master_password does not return a reference!
